Throw exceptions missing required JVM access flags